--- a/package.json
+++ b/package.json
@@ -1,73 +1,12 @@
 {
-  "name": "e_shop_cart",
-  "version": "1.0.0",
-  "main": "index.js",
-  "author": "Yogesh M. Mandaokar",
-  "license": "MIT",
-  "scripts": {
-    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js --progress --colors",
-    "build": "set NODE_ENV=production&& webpack -p"
-  },
-  "dependencies": {
-    "axios": "^0.18.0",
-    "babel-plugin-import": "^1.6.4",
-    "braintree-web": "^3.34.0",
-    "bson-objectid": "^1.2.2",
-    "date-and-time": "^0.6.2",
-    "flexboxgrid": "^6.3.1",
-    "immutable": "^3.8.2",
-    "lodash-es": "^4.17.10",
-    "material-ui": "^1.0.0-beta.37",
-    "material-ui-icons": "^1.0.0-beta.36",
-    "material-ui-pickers": "^1.0.0-rc.3",
-    "moment": "^2.21.0",
-    "prop-types": "latest",
-    "react": "latest",
-    "react-addons-pure-render-mixin": "^15.0.2",
-    "react-collapse": "^4.0.3",
-    "react-credit-cards": "^0.7.0",
-    "react-dom": "latest",
-    "react-grid-layout": "0.16.3",
-    "react-infinite-scroll-component": "^4.0.2",
-    "react-lazyload": "^2.3.0",
-    "react-responsive": "^4.0.5",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
-    "react-sticky": "^6.0.1",
-    "recharts": "^1.0.0-beta.10",
-    "reflux": "^6.4.1",
-    "reflux-core": "^1.0.0"
-  },
-  "devDependencies": {
-    "babel": "^6.5.2",
-    "babel-cli": "^6.22.2",
-    "babel-core": "^6.8.0",
-    "babel-eslint": "^6.0.4",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-import": "^1.6.4",
-    "babel-plugin-lodash": "^3.2.11",
-    "babel-plugin-recharts": "^1.1.0",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-plugin-system-import-transformer": "^2.0.0",
-    "babel-plugin-transform-class-properties": "^6.22.0",
-    "babel-polyfill": "^6.7.4",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-es2016": "^6.0.11",
-    "babel-preset-react": "^6.22.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "babel-regenerator-runtime": "^6.5.0",
-    "copy-webpack-plugin": "^4.4.1",
-    "css-loader": "^0.28.9",
-    "eslint": "^2.13.1",
-    "eslint-plugin-react": "^5.0.1",
-    "extract-text-webpack-plugin": "4.0.0-beta.0",
-    "html-webpack-plugin": "^3.1.0",
-    "lodash-webpack-plugin": "^0.11.4",
-    "preload-css-webpack-plugin": "^0.2.0",
-    "preload-webpack-plugin": "^2.2.0",
-    "style-loader": "^0.13.1",
-    "webpack": "^4.4.1",
-    "webpack-cli": "^2.0.13",
-    "webpack-dev-server": "^3.1.1"
+    "name": "e_cart",
+    "version": "1.0.0",
+    "main": "index.js",
+    "author": "Yogesh M. Mandaokar",
+    "license": "MIT",
+    "scripts": {
+      "start": "./scripts/start-dev.cmd"
+    },
+    "workspaces": ["packages/*"],
+    "private": true
   }
-}
